# atoshi-mobile-native

./: .gitignore  README.md
arkworks-prover/: Cargo.toml  README.md  build-android.sh  build-ios.sh  try-commits.sh
arkworks-prover/examples/: ProverNative.kt  RemoteProver.kt
arkworks-prover/src/: lib.rs
poseidon/: Cargo.toml  build-android.sh  build-ios.sh
poseidon/examples/: PoseidonNative.kt  PoseidonNative.swift
poseidon/src/: lib.rs
rapidsnark/: build-android.sh  build-ios.sh
rapidsnark/examples/: ProverNative.kt  jni_wrapper.cpp
