[package]
name = "atoshi-arkworks-prover"
version = "0.1.0"
edition = "2021"
description = "Groth16 ZK proof generator for Atoshi privacy mobile clients (license-friendly arkworks-rs)"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
# arkworks-rs Groth16 prover. License: Apache-2.0 / MIT (dual)
# This is the license-friendly replacement for rapidsnark (GPL-3.0).
ark-groth16 = { version = "0.5", default-features = false, features = ["parallel"] }
ark-bn254 = { version = "0.5", default-features = false, features = ["curve"] }
ark-ec = { version = "0.5", default-features = false }
ark-ff = { version = "0.5", default-features = false }
ark-std = { version = "0.5", default-features = false }
ark-serialize = { version = "0.5", default-features = false }
ark-relations = { version = "0.5", default-features = false }
ark-snark = { version = "0.5", default-features = false }

# Reads circom .zkey / .wasm / witness format produced by snarkjs.
# License: MIT
ark-circom = { git = "https://github.com/gakonst/ark-circom", branch = "master" }

# JSON for witness input
serde_json = "1"

# JNI for Android
[target.'cfg(target_os = "android")'.dependencies]
jni = { version = "0.21", default-features = false }

[profile.release]
lto = true
opt-level = 3
strip = true
codegen-units = 1
