[package]
name = "atoshi-arkworks-prover"
version = "0.1.0"
edition = "2021"
description = "Groth16 ZK proof generator for Atoshi privacy mobile clients (license-friendly arkworks-rs)"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
# Pin everything to ark-* 0.4 (a stable consistent set). Newer
# 0.5 has SmallFp which propagated into crypto-primitives and breaks
# ark-circom's expected version. 0.4 is well-tested with ark-circom.
ark-bn254       = { version = "=0.4.0", default-features = false, features = ["curve"] }
ark-ec          = { version = "=0.4.2", default-features = false }
ark-ff          = { version = "=0.4.2", default-features = false }
ark-std         = { version = "=0.4.0", default-features = false }
ark-relations   = { version = "=0.4.0", default-features = false }
ark-serialize   = { version = "=0.4.2", default-features = false }
ark-snark       = { version = "=0.4.0", default-features = false }
ark-groth16     = { version = "=0.4.0", default-features = false, features = ["parallel"] }
ark-poly        = { version = "=0.4.2", default-features = false }

# ark-circom commit from late 2023, known to work with ark-* 0.4.
# DO NOT change to master — master uses ark-* 0.5+ + ark-crypto-primitives
# which pulls SmallFp and breaks the build.
ark-circom = { git = "https://github.com/gakonst/ark-circom", rev = "1d185b6dbe149deec96d8fdf06a89fde58e88ef9", default-features = false, features = ["circom-2"] }

# Big-int + JSON
num-bigint = "0.4"
num-traits = "0.2"
serde_json = "1"

[target.'cfg(target_os = "android")'.dependencies]
jni = { version = "0.21", default-features = false }

[profile.release]
lto = true
opt-level = 3
strip = true
codegen-units = 1
